remove methods not avaiable in java version